--- a/main/cicd/cicd-pipeline/config/settings/dev.yml
+++ b/main/cicd/cicd-pipeline/config/settings/dev.yml
@@ -4,7 +4,7 @@ awsProfile: wehi-dev
 # Github parameters
 githubOwner: WEHI-ResearchComputing
 repoName: service-workbench-on-aws
-repoBranch: feature
+repoBranch: new_cert_test
 
 # Email address to receive CodePipeline failure notifications and notifications for manual approval
 emailForNotifications: stabassum@dius.com.au
