--- a/main/cicd/cicd-pipeline/config/settings/dev.yml
+++ b/main/cicd/cicd-pipeline/config/settings/dev.yml
@@ -9,3 +9,17 @@ repoBranch: feature
 
 # Email address to receive CodePipeline failure notifications and notifications for manual approval
 emailForNotifications: stabassum@dius.com.au
+
+# Flag indicating whether to create a staging environment.
+# If this flag is set to true the pipeline will first deploy the solution to a staging environment before deploying the
+# solution to the target environment. By default, the staging environment is named by suffixing "stg" to the
+# target environment name.
+# For example, if the name of the target environment is "prod" the staging env will be named "prodstg".
+# You can change the name of the staging environment by specifying "stgEnvName" setting
+# If this flag is set to true then you MUST also provide settings file for the staging env.
+# For example, if createStagingEnv=true and if the stgEnvName=t"prodstg" then make sure you have
+# "prodstg.yml" file in top level "config/settings" directory
+createStagingEnv: false
+
+# Flag indicating whether to require manual approval before deploying to target environment
+requireManualApproval: false
