--- a/main/config/settings/prodstg.yml
+++ b/main/config/settings/prodstg.yml
@@ -44,7 +44,7 @@ rootUserEmail: user@example.com
 # localRoleAutoAdjustTrust: true
 # Optional custom domain name; if empty, use the CloudFront domain name
 domainName: stg.prod.wehiresearch.com
-certificateArn: arn:aws:acm:us-east-1:904145425705:certificate/2a68a191-5da8-4122-9a0a-e08e611fa1ae
+certificateArn: arn:aws:acm:us-east-1:{self:custom.settings.awsAccountInfo.awsAccountId}:certificate/2a68a191-5da8-4122-9a0a-e08e611fa1ae
 hostedZoneId: Z09165212K3SH794S09I
 # To use a custom domain name, provide the following two values, the domain name
 # itself, and the ARN for the manually-created TLS certificate to use from ACM.
