--- a/main/config/settings/prodstg.yml
+++ b/main/config/settings/prodstg.yml
@@ -43,7 +43,7 @@ rootUserEmail: user@example.com
 # allow assuming the role from local machine (applicable only for local development)
 # localRoleAutoAdjustTrust: true
 # Optional custom domain name; if empty, use the CloudFront domain name
-domainName: stg.main.prod.wehiresearch.com
+domainName: stgmain.prod.wehiresearch.com
 certificateArn: arn:aws:acm:us-east-1:{self:custom.settings.awsAccountInfo.awsAccountId}:certificate/2a68a191-5da8-4122-9a0a-e08e611fa1ae
 hostedZoneId: Z09165212K3SH794S09I
 # To use a custom domain name, provide the following two values, the domain name
