--- a/main/cicd/cicd-pipeline/config/settings/prod.yml
+++ b/main/cicd/cicd-pipeline/config/settings/prod.yml
@@ -7,4 +7,4 @@ repoName: service-workbench-on-aws
 repoBranch: mainline
 
 # Email address to receive CodePipeline failure notifications and notifications for manual approval
-emailForNotifications: stabassum@dius.com.au
+emailForNotifications: kelabora.j@wehi.edu.au
