Update from upstream to v6.0.0 (#9)
* git actions to origin (#1139)

* chore(deps): bump golang.org/x/sys (#1138)

Bumps [golang.org/x/sys](https://github.com/golang/sys) from 0.0.0-20201026173827-119d4633e4d1 to 0.1.0.
- [Release notes](https://github.com/golang/sys/releases)
- [Commits](https://github.com/golang/sys/commits/v0.1.0)

---
updated-dependencies:
- dependency-name: golang.org/x/sys
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: FernandoAranda <fernandoarandacarrillo@gmail.com>

* Revert "chore(deps): bump golang.org/x/sys (#1138)" (#1140)

This reverts commit c836c57f859dd52a8f437bdd4dd170f0a37aba91.

Co-authored-by: Fernando Aranda <farandac@amazon.com>

* fix: s3 CLI command fix (#1149)

* docs: remove Docusaurus and use IG (#1150)

* fix: sagemaker autostop (#1153)

* fix: autostop sagemaker fix for non TRE/no study mounting (#1154)

* Minor documentation updates to reconcile differences between AWS website and Repository. Additionally included step for the Cloud9 installation instructions to specify a public subnet for VPC installation. If you do not you cannot use AWS Managed Temporary Credentials and will break the install of Cloud9 without a very verbose error message. (#1151)

* chore(deps): bump golang.org/x/sys from 0.0.0-20201026173827-119d4633e4d1 to 0.1.0 in /addons/addon-raas-s3-copy/packages/s3-synchronizer (#1152)

* fix: go mod format (#1163)

* Add elasticmapreduce:AddTags permission to LaunchConstraint role (#1164)

* fix: upgrade goland in buildspec (#1166)

* fix: upgrade code build image for target env deploy project (#1168)

* revert: revert Go version upgrade (#1169)

* Update deploy-integ-appstream-egress.yml (#1172)

* Update deploy-integ-appstream-egress.yml

Added OIDC config for role assumption

* Update deploy-integ.yml

Adding OIDC c

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 **/node_modules
 **/npm-debug.log
 **/pnpm-debug.log
-**/.docusaurus
 
 .pnpm-store/*
 
@@ -38,3 +37,6 @@ docs/build
 
 # rStudio specific
 source/ServiceWorkbenchOnAWS/main/solution/machine-images/config/infra/files/rstudio/*
+
+# temp packer log files
+main/solution/machine-images/*_build.log
