--- a/addons/addon-base-raas/packages/base-raas-cfn-templates/src/templates/onboard-account.cfn.yml
+++ b/addons/addon-base-raas/packages/base-raas-cfn-templates/src/templates/onboard-account.cfn.yml
@@ -106,13 +106,13 @@ Parameters:
     Description: Optional custom Domain name to be created in Route53
     Type: String
     Default: ''
-  
+
   EnableAmiSharing:
     Type: String
     AllowedValues: [true, false]
     Description: Use appstream image from the central devops account
     Default: false
-  
+
   DevopsAccountId:
     Type: String
     Description: The account id of the central AWS account where the appstream image is created.
@@ -150,8 +150,8 @@ Conditions:
     - !Not [!Equals [!Ref 'DomainName', '']]
     - !Condition isAppStream
   enableFlowLogs: !Equals [!Ref EnableFlowLogs, true]
-  enableFlowLogsNonAppStream: !And [Condition: isNotAppStream,Condition: enableFlowLogs]
-  enableFlowLogsWithAppStream: !And [Condition: isAppStream,Condition: enableFlowLogs]
+  enableFlowLogsNonAppStream: !And [Condition: isNotAppStream, Condition: enableFlowLogs]
+  enableFlowLogsWithAppStream: !And [Condition: isAppStream, Condition: enableFlowLogs]
   amiSharingEnabled: !Equals
     - !Ref EnableAmiSharing
     - true
@@ -424,7 +424,7 @@ Resources:
               - sagemaker:StartNotebookInstance
               - sagemaker:StopNotebookInstance
               - sagemaker:DescribeNotebookInstance
-            Resource: !Sub 'arn:aws:sagemaker:${AWS::Region}:${AWS::AccountId}:notebook-instance/basicnotebookinstance-*'
+            Resource: !Sub 'arn:aws:sagemaker:${AWS::Region}:${AWS::AccountId}:notebook-instance/?asic?otebook?nstance-*'
           - Effect: Allow
             Action:
               - sagemaker:ListNotebookInstances
@@ -768,7 +768,7 @@ Resources:
     Properties:
       AliasName: !Join ['', ['alias/', Ref: Namespace, '-encryption-key']]
       TargetKeyId: !Ref EncryptionKey
-  
+
   FlowLogCloudwatchGroup:
     Type: 'AWS::Logs::LogGroup'
     DeletionPolicy: Retain
@@ -878,6 +878,41 @@ Resources:
               - '*'
       RouteTableIds:
         - !Ref PrivateWorkspaceRouteTable
+      VpcEndpointType: Gateway
+      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
+      VpcId: !Ref VPC
+
+  S3NonAppStreamEndpoint:
+    Type: 'AWS::EC2::VPCEndpoint'
+    Condition: isNotAppStream
+    Properties:
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal: '*'
+            Action:
+              - 's3:GetObject'
+              - 's3:GetObjectTagging'
+              - 's3:GetObjectTorrent'
+              - 's3:GetObjectVersion'
+              - 's3:GetObjectVersionTagging'
+              - 's3:GetObjectVersionTorrent'
+              - 's3:AbortMultipartUpload'
+              - 's3:ListMultipartUploadParts'
+              - 's3:PutObject'
+              - 's3:PutObjectAcl'
+              - 's3:PutObjectTagging'
+              - 's3:PutObjectVersionTagging'
+              - 's3:DeleteObject'
+              - 's3:DeleteObjectTagging'
+              - 's3:DeleteObjectVersion'
+              - 's3:DeleteObjectVersionTagging'
+              - 's3:ListBucket' # Required in get_bootstrap.sh when running `aws s3 sync`
+            Resource:
+              - '*'
+      RouteTableIds:
+        - !Ref PublicRouteTable
       VpcEndpointType: Gateway
       ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
       VpcId: !Ref VPC
@@ -1082,7 +1117,12 @@ Resources:
       EnableDefaultInternetAccess: False
       FleetType: !Ref AppStreamFleetType
       IdleDisconnectTimeoutInSeconds: !Ref AppStreamIdleDisconnectTimeoutSeconds
-      ImageArn: !If [amiSharingEnabled, !Sub 'arn:aws:appstream:${AWS::Region}:${DevopsAccountId}:image/${AppStreamImageName}', !Sub 'arn:aws:appstream:${AWS::Region}:${CentralAccountId}:image/${AppStreamImageName}']
+      ImageArn:
+        !If [
+          amiSharingEnabled,
+          !Sub 'arn:aws:appstream:${AWS::Region}:${DevopsAccountId}:image/${AppStreamImageName}',
+          !Sub 'arn:aws:appstream:${AWS::Region}:${CentralAccountId}:image/${AppStreamImageName}',
+        ]
       InstanceType: !Ref AppStreamInstanceType
       MaxUserDurationInSeconds: !Ref AppStreamMaxUserDurationSeconds
       Name: !Sub ${Namespace}-ServiceWorkbenchFleet
@@ -1151,6 +1191,13 @@ Outputs:
     Condition: isNotAppStream
     Description: The public route table assigned to the workspace VPC
     Value: !Ref PublicRouteTable
+
+  S3NonAppStreamVPCE:
+    Description: S3 interface endpoint
+    Condition: isNotAppStream
+    Value: !Ref S3NonAppStreamEndpoint
+    Export:
+      Name: !Join [ '', [ Ref: Namespace, '-S3NonAppStreamVPCE' ] ]
 
   #------------AppStream Output Below-------
   PrivateAppStreamSubnet:
@@ -1222,3 +1269,10 @@ Outputs:
     Description: Route53 hosted zone
     Condition: isAppStreamAndCustomDomain
     Value: !Ref Route53HostedZone
+
+  S3AppStreamVPCE:
+    Description: S3 interface endpoint
+    Condition: isAppStream
+    Value: !Ref S3Endpoint
+    Export:
+      Name: !Join [ '', [ Ref: Namespace, '-S3AppStreamVPCE' ] ]
